# AoC-Mono

./: .gitignore  readme.md
2015/haskell/: aoc2015.cabal  readme.md
2016/rust/: readme.md
2021/python/: README.md
2024/rust/: Cargo.toml  readme.md
2024/rust/src/: aoclib.rs  main.rs  prelude.rs  test.rs
2024/rust/src/day01/: input.txt  mod.rs
2024/rust/src/day02/: mod.rs
2024/rust/src/day03/: mod.rs
2024/rust/src/day04/: mod.rs
2024/rust/src/day05/: mod.rs
2024/rust/src/day06/: mod.rs
2024/rust/src/day07/: mod.rs
2024/rust/src/day08/: mod.rs
2024/rust/src/day09/: mod.rs
2024/rust/src/day10/: mod.rs
2024/rust/src/day11/: mod.rs
2024/rust/src/day12/: mod.rs
2024/rust/src/day13/: mod.rs
2024/rust/src/day14/: mod.rs
2024/rust/src/day15/: mod.rs
2024/rust/src/day16/: mod.rs
2024/rust/src/day17/: mod.rs
2024/rust/src/day18/: mod.rs
2024/rust/src/day19/: mod.rs
2024/rust/src/day20/: mod.rs
2024/rust/src/day21/: mod.rs
2024/rust/src/day22/: mod.rs
2024/rust/src/day23/: mod.rs
2024/rust/src/day24/: bruh.txt  mod.rs
2024/rust/src/day25/: mod.rs
2025/rust/: Cargo.toml  bacon.toml  readme.md
2025/rust/src/: aoclib.rs  main.rs  prelude.rs  test.rs
2025/rust/src/day01/: mod.rs
2025/rust/src/day02/: mod.rs
2025/rust/src/day03/: mod.rs
2025/rust/src/day04/: mod.rs
2025/rust/src/day05/: mod.rs
2025/rust/src/day06/: mod.rs
2025/rust/src/day07/: mod.rs
2025/rust/src/day08/: mod.rs
2025/rust/src/day09/: mod.rs
2025/rust/src/day10/: mod.rs
2025/rust/src/day11/: mod.rs
2025/rust/src/day12/: mod.rs
(+64 files in other folders)
