[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
authors = ["de_grote"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = "0.15.7"
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
num = "0.4.3"
ureq = "2.11.0"
