[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"
authors = ["de_grote"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
glam = "0.30.9"
itertools = "0.14.0"
nom = "8.0.0"
num = "0.4.3"
ureq = "3.1.4"
